--- a/MoGo/index.html
+++ b/MoGo/index.html
@@ -42,8 +42,8 @@
                 <span class="nav-toggle__item">Menu</span>
             </button>
 
-        </div>
-    </div>
+        </div><!-- header__inner -->
+    </div><!-- container -->
 </header>
 
 
