--- a/webkirill/index.html
+++ b/webkirill/index.html
@@ -98,7 +98,7 @@
             <div class="pictures__item">
                 <div class="picture__inner">
                     <div class="pictures__img">
-                        <img src="img/Me.jpg" alt="" height="500" width="250">
+                        <img src="img/Me.jpg" alt="">
                         <div class="pictures__text">
                             <div class="social">
                                 <a class="social__item" href="https://vk.com/id285236843" target="_blank">
