--- a/webkirill/index.html
+++ b/webkirill/index.html
@@ -13,15 +13,14 @@
 <div class="page">  
 
      <!-- Header -->
-<header class="header">
+<header class="header" id="header">
     <div class="container">
         <div class="header__inner">
             <div class="header__logo" data-scroll="#intro">Web</div>
 
             <nav class="nav" id="nav">
                 <a class="nav__link" href="#" data-scroll="#projects">Projects</a>
-                <a class="nav__link"  href="#" data-scroll="#services">Service</a>
-                <a class="nav__link"  href="#" data-scroll="#contact">Contact</a>
+                <a class="nav__link"  href="#"  data-scroll="#contact">Contact</a>
             </nav>
 
             <button class="nav-toggle" id="nav_toggle" type="button">
@@ -50,7 +49,7 @@
     <!-- About
     ========================================== -->
 
-    <section class="section" id="about">
+    <section class="section" id="projects">
         <div class="container">
             <div class="section__header">
                 <h2 class="section__title">
@@ -85,7 +84,7 @@
 
 
 <!-- Team -->
-<section class="section section--me">
+<section class="section section--me" id="contact">
     <div class="container">
         <div class="section__header">
             <h2 class="section__title">
@@ -128,7 +127,15 @@
 </section>
 
 
-</div>  
+</div><!-- page -->
+
+
+<!-- JavaScript -->
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="app.js"></script>
+
 
 </body>
 </html>
