--- a/prechy/index.html
+++ b/prechy/index.html
@@ -48,9 +48,9 @@
                 <div class="intro__suptitle">dummy text of the <br> printing & typesetting </div>
                 <a class="btn" href="#">Sign up now</a>
             </div><!-- intro__txt -->
-        </div>
-    </div>
-</div>
+        </div><!-- intro__inner -->
+    </div><!-- container -->
+</div><!-- intro -->
 
 
 
