--- a/prechy/index.html
+++ b/prechy/index.html
@@ -29,6 +29,7 @@
                 <a href="#" class="nav__link">Service</a>
                 <a href="#" class="nav__link">Contact</a>
             </nav>
+            
         </div><!-- header__inner -->
     </div><!-- container -->
 </header>
@@ -53,7 +54,22 @@
 </div><!-- intro -->
 
 
+<!-- Services
+=================================== -->
 
+<div class="services">
+    <div class="container">
+
+        <div class="services__item">
+            <div class="services__img">
+                <img src="img/services/1.png" alt="">
+            </div>
+            <div class="services__title">Contrary to popular</div>
+            <div class="services__suptitle">Lorem Ipsum is not simply random text. It has roots in a piece </div>
+        </div><!-- services__item -->
+
+    </div><!-- container -->
+</div><!-- services -->
 
 
 </body>
