--- a/activebox/index.html
+++ b/activebox/index.html
@@ -432,6 +432,7 @@
                 <div> Copyright © 2015 ActiveBox. All Rights Reserved</div>
                <div>Made with Love <span>by Kamal Chaneman
                </span></div>
+            </div>
 
         </div> <!-- container -->
     </div> <!-- copyright -->
