--- a/activebox/index.html
+++ b/activebox/index.html
@@ -79,8 +79,8 @@
                 <span class="burger__item">Menu</span>
             </button>
 
-        </div>
-    </div>
+        </div><!-- header__inner -->
+    </div><!-- container -->
 </header>
 
 
@@ -337,16 +337,17 @@
 
         <div class="reviews__slider" id="reviewsSlider">
             <div class="skick-item">
-            <div class="reviews__item">
-                <div class="reviews__photo">
-                    <img class="reviews__img" src="img/reviews/review-1.jpg" alt="">
-                </div>
-                <div class="reviews__content">
-                    <div class="reviews__text">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</div>
-                    <div class="reviews__author">Susan Sims, Interaction Designer at XYZ</div>
-                </div>
-            </div>
-        </div>
+                <div class="reviews__item">
+                    <div class="reviews__photo">
+                        <img class="reviews__img" src="img/reviews/review-1.jpg" alt="">
+                    </div>
+                    <div class="reviews__content">
+                        <div class="reviews__text">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</div>
+                        <div class="reviews__author">Susan Sims, Interaction Designer at XYZ</div>
+                    </div>
+                </div><!-- reviews__item -->
+            </div><!-- skick-item -->
+
             <div class="skick-item">
                 <div class="reviews__item">
                     <div class="reviews__photo">
@@ -356,9 +357,10 @@
                         <div class="reviews__text">“Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.”</div>
                         <div class="reviews__author">Susan Sims, Interaction Designer at XYZ</div>
                     </div>
-                </div>
-            </div>
-        </div>
+                </div><!-- reviews__item -->
+            </div><!-- skick-item -->
+
+        </div><!-- reviews__slider -->
 
     </div> <!--container-->
 </div> <!--reviews-->
