--- a/prechy/index.html
+++ b/prechy/index.html
@@ -30,6 +30,10 @@
                 <a href="#" class="nav__link">Contact</a>
             </nav>
 
+            <button class="burger" type="button">
+                <span class="burger__item">Menu</span>
+            </button>
+
         </div><!-- header__inner -->
     </div><!-- container -->
 </header>
@@ -88,20 +92,23 @@
 </div><!-- services -->
 
 
-<div class="contact">
-    <div class="container">
-        <div class="contact__inner">
 
-            <div class="contact__item">
-                <div class="contact__title">The Shopping cart</div>
-                <div class="contact__img">
+<!--  -->
+
+<div class="cart">
+    <div class="container">
+        <div class="cart__inner">
+
+            <div class="cart__item">
+                <div class="cart__title">The Shopping cart</div>
+                <div class="cart__img">
                     <img src="img/cart.png" alt="">
                 </div>
-            </div><!-- contact__item -->
+            </div><!-- cart__item -->
 
-            <div class="contact__item">
-                <div class="contact__suptitle">Some Bullet text here</div>
-                <div class="contact__txt">
+            <div class="cart__item">
+                <div class="cart__suptitle">Some Bullet text here</div>
+                <div class="cart__txt">
                     Lorem Ipsum is simply dummy text of the printing and typesetting 
                     <br>
                     Lorem Ipsum has been the industry's standard dummy text ever 
@@ -115,13 +122,13 @@
                     Remaining essentially unchanged. It was popularised 
                     <br>
                     The release of Letraset sheets containing Lorem Ipsum passages
-                </div><!-- contact__txt -->
-            </div><!-- contact__item -->
+                </div><!-- cart__txt -->
+            </div><!-- cart__item -->
 
-        </div><!-- contact__inner -->
+        </div><!-- cart__inner -->
 
     </div><!-- container -->
-</div><!-- contact -->
+</div><!-- cart -->
 
 <hr>
 
