--- a/webkirill/index.html
+++ b/webkirill/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name='freelancehunt' content='5f5862514353c2a'>
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@300i;400;700&display=swap" rel="stylesheet">
 <script src="https://kit.fontawesome.com/989af0ce81.js" crossorigin="anonymous"></script>
