--- a/activebox/index.html
+++ b/activebox/index.html
@@ -336,7 +336,7 @@
     <div class="container">
 
         <div class="reviews__slider" id="reviewsSlider">
-            <div class="skick-item">
+            <div class="slick-item">
                 <div class="reviews__item">
                     <div class="reviews__photo">
                         <img class="reviews__img" src="img/reviews/review-1.jpg" alt="">
@@ -348,7 +348,7 @@
                 </div><!-- reviews__item -->
             </div><!-- skick-item -->
 
-            <div class="skick-item">
+            <div class="slick-item">
                 <div class="reviews__item">
                     <div class="reviews__photo">
                         <img class="reviews__img" src="img/reviews/review-1.jpg" alt="">
