--- a/webkirill/index.html
+++ b/webkirill/index.html
@@ -82,6 +82,15 @@
                     </div><!-- picture__inner -->
                 </a><!-- pictures__item -->
 
+                <a href="https://leonariks.github.io/prechy/" target="_blank" class="pictures__item">
+                    <div class="picture__inner">
+                        <div class="pictures__img">
+                            <img src="img/prenchu.png" alt="">
+                            <div class="pictures__text">MoGo</div>
+                        </div><!-- pictures__img -->
+                    </div><!-- picture__inner -->
+                </a><!-- pictures__item -->
+
             </div><!-- pictures -->
         </div><!-- container -->
     </section><!-- section -->
