--- a/betchan/index.html
+++ b/betchan/index.html
@@ -14,6 +14,7 @@
     <title>Bonuses</title>
 </head>
 <body>
+
     
     <header class="header">
         <div class="container">
@@ -151,6 +152,62 @@
                 <div class="accordion__header">
                     <div class="accordion__title">1. QUESTION?</div>
                     <div class="accordion__show">Show</div>
+                </div><!-- accordion__header -->
+
+                <div class="accordion__content">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis iste repudiandae possimus laudantium ut perspiciatis modi placeat id doloribus vel rerum, inventore molestiae ducimus hic eos exercitationem vero, est architecto ipsum quidem. Consequuntur in iste aperiam eveniet odio cum fuga!</p>
+                </div>
+
+            </div><!-- accordion__item -->
+
+            <div class="accordion__item">
+
+                <div class="accordion__header">
+                    <div class="accordion__title">2. QUESTION?</div>
+                    <div class="accordion__show">Show</div>
+                </div><!-- accordion__header -->
+
+                <div class="accordion__content">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis iste repudiandae possimus laudantium ut perspiciatis modi placeat id doloribus vel rerum, inventore molestiae ducimus hic eos exercitationem vero, est architecto ipsum quidem. Consequuntur in iste aperiam eveniet odio cum fuga!</p>
+                </div>
+
+            </div><!-- accordion__item -->
+
+            <div class="accordion__item">
+
+                <div class="accordion__header">
+                    <div class="accordion__title">3. QUESTION?</div>
+                    <div class="accordion__show">Show</div>
+                </div><!-- accordion__header -->
+
+                <div class="accordion__content">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis iste repudiandae possimus laudantium ut perspiciatis modi placeat id doloribus vel rerum, inventore molestiae ducimus hic eos exercitationem vero, est architecto ipsum quidem. Consequuntur in iste aperiam eveniet odio cum fuga!</p>
+                </div>
+
+            </div><!-- accordion__item -->
+
+            <div class="accordion__item">
+
+                <div class="accordion__header">
+                    <div class="accordion__title">4. QUESTION?</div>
+                    <div class="accordion__show">Show</div>
+                </div><!-- accordion__header -->
+
+                <div class="accordion__content">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis iste repudiandae possimus laudantium ut perspiciatis modi placeat id doloribus vel rerum, inventore molestiae ducimus hic eos exercitationem vero, est architecto ipsum quidem. Consequuntur in iste aperiam eveniet odio cum fuga!</p>
+                </div>
+
+            </div><!-- accordion__item -->
+
+            <div class="accordion__item">
+
+                <div class="accordion__header">
+                    <div class="accordion__title">5. QUESTION?</div>
+                    <div class="accordion__show">Show</div>
+                </div><!-- accordion__header -->
+
+                <div class="accordion__content">
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis iste repudiandae possimus laudantium ut perspiciatis modi placeat id doloribus vel rerum, inventore molestiae ducimus hic eos exercitationem vero, est architecto ipsum quidem. Consequuntur in iste aperiam eveniet odio cum fuga!</p>
                 </div>
 
             </div><!-- accordion__item -->
@@ -159,6 +216,33 @@
 
     </div><!-- container -->
 </div><!-- questions -->
+
+
+<footer class="footer">
+    <div class="container">
+        <div class="footer__inner">
+
+            <div class="footer__title">
+                Contact us
+            </div>
+
+            <div class="footer__social">
+                <div class="footer__box">
+                    <a class="footer__icon" href="#" target="_blank">
+                        <i class="fab fa-facebook-square"></i>
+                    </a>
+                    <a class="footer__icon" href="#" target="_blank">
+                        <i class="fab fa-twitter-square"></i>
+                    </a>
+                    <a class="footer__icon" href="#" target="_blank">
+                        <i class="fab fa-twitch"></i>
+                    </a>
+                </div>
+            </div><!-- footer__social -->
+
+        </div><!-- footer__inner -->
+    </div><!-- container -->
+</footer><!-- footer -->
 
 </body>
 </html>
