--- a/betchan/index.html
+++ b/betchan/index.html
@@ -33,7 +33,7 @@
                         <a href="#" target="_blank">
                             <i class="fas fa-gamepad"></i>
                         </a>
-                            <a class="header__txt" href="#" target="_blank">Lorem</a>
+                        <a class="header__txt" href="#" target="_blank">Lorem</a>
                         
                     </div><!-- header__bonuses -->
 
@@ -82,7 +82,7 @@
                     </div><!-- intro__markers -->   
                     
                     <div class="intro__txt">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo voluptatem aut laudantium veritatis doloribus excepturi maxime deleniti eum animi magnam nemo architecto, fugiat sapiente tenetur? Laudantium eos dolores aspernatur vero odit reprehenderit. Doloribus voluptates enim mollitia hic inventore corporis dolore, consectetur non atque eius quaerat explicabo ratione porro? Rem, sint!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo voluptatem aut laudantium veritatis doloribus excepturi maxime deleniti eum animi magnam nemo architecto, fugiat sapiente tenetur? Laudantium eos dolores aspernatur vero odit reprehenderit.
                     </div>
 
                 </div><!-- intro__item -->
