--- a/webkirill/index.html
+++ b/webkirill/index.html
@@ -86,7 +86,16 @@
                     <div class="picture__inner">
                         <div class="pictures__img">
                             <img src="img/prenchu.png" alt="">
-                            <div class="pictures__text">MoGo</div>
+                            <div class="pictures__text">Prenchu</div>
+                        </div><!-- pictures__img -->
+                    </div><!-- picture__inner -->
+                </a><!-- pictures__item -->
+
+                <a href="https://leonariks.github.io/betchan/" target="_blank" class="pictures__item">
+                    <div class="picture__inner">
+                        <div class="pictures__img">
+                            <img src="img/betchan.png" alt="">
+                            <div class="pictures__text">Betchan</div>
                         </div><!-- pictures__img -->
                     </div><!-- picture__inner -->
                 </a><!-- pictures__item -->
