--- a/betchan/index.html
+++ b/betchan/index.html
@@ -88,6 +88,7 @@
                 </div><!-- intro__item -->
   
         </div><!-- container -->
+  
     </div><!-- intro -->
 
 
@@ -290,6 +291,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script src="app.js"></script>
+<script src="/path/to/parallax.js"></script>
 
 </body>
 </html>
