--- a/webkirill/index.html
+++ b/webkirill/index.html
@@ -82,7 +82,7 @@
                     </div><!-- picture__inner -->
                 </a><!-- pictures__item -->
 
-                <a href="https://leonariks.github.io/prechy/" target="_blank" class="pictures__item">
+                <a href="https://leonariks.github.io/prechu/" target="_blank" class="pictures__item">
                     <div class="picture__inner">
                         <div class="pictures__img">
                             <img src="img/prenchu.png" alt="">
@@ -91,7 +91,7 @@
                     </div><!-- picture__inner -->
                 </a><!-- pictures__item -->
 
-                <a href="https://leonariks.github.io/betchan/" target="_blank" class="pictures__item">
+                <a href="https://leonariks.github.io/gaming/" target="_blank" class="pictures__item">
                     <div class="picture__inner">
                         <div class="pictures__img">
                             <img src="img/betchan.png" alt="">
