--- a/school/index.html
+++ b/school/index.html
@@ -117,7 +117,7 @@
       <h1 id="registration"  class="title">Регистрация</h1>
       <div class="section">
         <div class="text">
-          <p class="text__l">Узнать свой уровень владения английским языком и зарегистрироваться на онлайн курсы можно по этой <a class="reg" href="#">ссылке</a>.</p>
+          <p class="text__l">Узнать свой уровень владения английским языком и зарегистрироваться на онлайн курсы можно по этой <a class="reg" href="#" target="_blank">ссылке</a>.</p>
         </div>
         <img src="img/registr/reg.png" alt="">
       </div><!--Section-->
@@ -132,24 +132,24 @@
     <h1 id="contacts" class="title">Контакты</h1>
     <div class="contacts">
       <div class="contact">
-        <img class="icon" src="" alt="">
-        <a href="tel:+382 68 381 048">+382 68 381 048</a>
+        <img class="icon" src="icons/telephone.png" alt="">
+        <a href="tel:+382 68 381 048" target="_blank">+382 68 381 048</a>
       </div><!--Contact-->
       <div class="contact">
-        <img class="icon" src="" alt="">
-        <a href="mailto:lingualab.me@gmail.com">lingualab.me@gmail.com</a>
+        <img class="icon" src="icons/email.png" alt="">
+        <a href="mailto:lingualab.me@gmail.com" target="_blank">lingualab.me@gmail.com</a>
       </div><!--Contact-->
       <div class="contact">
-        <img class="icon" src="" alt="">
-        <a href="#">lingualab_mne</a>
+        <img class="icon" src="icons/inst.png" alt="">
+        <a href="https://www.instagram.com/lingualab_mne/" target="_blank">lingualab_mne</a>
       </div><!--Contact-->
       <div class="contact">
-        <img class="icon" src="" alt="">
-        <a href="#">LinguaLab Mne</a>
+        <img style="width: 110px; margin-left: -15px;" class="icon" src="icons/facebook.png" alt="">
+        <a style="margin-left: -15px;" href="https://www.facebook.com/LinguaLabMne" target="_blank">LinguaLab Mne</a>
       </div><!--Contact-->
       <div class="contact">
         <img class="icon" src="icons/whats app.png" alt="">
-        <a href="#">+382 68 381 048</a>
+        <a href="#" target="_blank">+382 68 381 048</a>
       </div><!--Contact-->
     </div><!--Contacts-->
   </div><!--Container-->
