--- a/school/index.html
+++ b/school/index.html
@@ -144,10 +144,10 @@
         <a href="https://www.instagram.com/lingualab_mne/" target="_blank">lingualab_mne</a>
       </div><!--Contact-->
       <div class="contact">
-        <img style="width: 110px; margin-left: -15px;" class="icon" src="icons/facebook.png" alt="">
-        <a style="margin-left: -15px;" href="https://www.facebook.com/LinguaLabMne" target="_blank">LinguaLab Mne</a>
+        <img style="width: 110px; margin-left: -15px; margin-top: -10px;" class="icon" src="icons/facebook.png" alt="">
+        <a style="margin-left: -15px;margin-top: -10px;" href="https://www.facebook.com/LinguaLabMne" target="_blank">LinguaLab Mne</a>
       </div><!--Contact-->
-      <div class="contact">
+      <div style="margin-top: -15px;" class="contact">
         <img class="icon" src="icons/whats app.png" alt="">
         <a href="#" target="_blank">+382 68 381 048</a>
       </div><!--Contact-->
