--- a/school/index.html
+++ b/school/index.html
@@ -43,8 +43,8 @@
 
   <!--About Us-->
   <div class="container">
-    <div class="about__us">
-      <h1 id="about" class="title">О нас</h1>
+    <div id="about" class="about__us">
+      <h1 class="title">О нас</h1>
       <div class="section">
         <img src="img/about us/about_1.png" alt="">
         <div class="text">
