--- a/school/index.html
+++ b/school/index.html
@@ -7,32 +7,37 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Source+Serif+4:opsz@8..60&display=swap" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <title>LinguaLab</title>
   <link rel="icon" href="icons/LinguaLab.png">
+
+<script src="app.js"></script>
+
 </head>
 <body>
   <div class="header">
     <div class="container">
       <div class="header__inner">
-
-        <nav class="nav__first">
-          <a class="nav__link" href="#about">О нас</a>
-          <a class="nav__link" href="#groups">Группы online курсов</a>
-        </nav>
-        <div class="header__logo">
-          <a href="#bg1">
-            <img src="icons/ling.png" alt="">
-          </a>
-        </div>
-        <nav class="nav__second">
-          <a class="nav__link" href="#registration">Регистрация</a>
-          <a class="nav__link" href="#contacts">Контакты</a> 
-          <div>
-            <a class="nav__lang" href="#">Eng</a>/
-            <a class="nav__lang" href="#">Mne</a>/
-            <a class="nav__lang" href="#">Rus</a>
+          <nav class="nav" id="nav">
+            <a class="nav__link" href="#about">О нас</a>
+            <a class="nav__link" href="#groups">Группы online курсов</a>
+            <a class="nav__link nav__reg" href="#registration">Регистрация</a>
+            <a class="nav__link" href="#contacts">Контакты</a> 
+            <div class="nav__div">
+              <a class="nav__lang" href="#">Eng</a> /
+              <a class="nav__lang" href="#">Mne</a> /
+              <a class="nav__lang" href="#"> Rus</a>
+            </div>
+          </nav>
+          <div class="header__logo">
+            <a href="#bg1">
+              <img src="icons/ling.png" alt="">
+            </a>
           </div>
-        </nav>
+          <button class="nav-toggle" id="nav_toggle" type="button">
+            <span class="nav-toggle__item">Menu</span>
+        </button>
+        </div>
 
       </div><!--Header__inner--> 
     </div><!--Container-->
@@ -77,7 +82,7 @@
       <div class="section">
         <div class="text">
           <p class="text__l">	Онлайн обучение доступно для жителей всех городов Черногории. У нас открыто 9 основных программ для студентов различных возрастов и уровней подготовки.</p><br>
-          <p class="text__l">С русскоязычным преподавателем:</p><br>
+          <p class="text__l text__ll">С русскоязычным преподавателем:</p><br>
           <ul>
             <li><p class="text__l group__txt">	7-11 лет - Beginner и Elementary+ уровни;</p></li>
             <li><p class="text__l group__txt">12-14 лет - Elementary и Pre-intermediate+ уровни;</p></li>
@@ -129,7 +134,7 @@
   </div>
 
   <div class="container">
-    <h1 id="contacts" class="title">Контакты</h1>
+    <h1 id="contacts" class="title title__c">Контакты</h1>
     <div class="contacts">
       <div class="contact">
         <img class="icon" src="icons/telephone.png" alt="">
@@ -153,6 +158,11 @@
       </div><!--Contact-->
     </div><!--Contacts-->
   </div><!--Container-->
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+  <script src="app.js"></script>
 
 </body>
 </html>
