--- a/school/index.html
+++ b/school/index.html
@@ -43,7 +43,8 @@
     </div><!--Container-->
   </div><!--Header-->
 
-  <div id="bg1" class="bg__img-1">
+  <div id="bg1">
+    <img class="bg__img" src="img/1.png" alt="">
   </div>
 
   <!--About Us-->
@@ -73,7 +74,8 @@
     </div><!--About Us-->
   </div><!--Container-->
 
-  <div class="bg__img-2">
+  <div>
+    <img class="bg__img" src="img/2.png" alt="">
   </div>
 
   <div class="container">
@@ -113,7 +115,8 @@
     </div><!--Groups-->
   </div><!--Container-->
 
-  <div class="bg__img-3">
+  <div>
+    <img class="bg__img" src="img/3.png" alt="">
   </div>
 
   <div class="container">
@@ -122,7 +125,7 @@
       <h1 id="registration"  class="title">Регистрация</h1>
       <div class="section">
         <div class="text">
-          <p class="text__l">Узнать свой уровень владения английским языком и зарегистрироваться на онлайн курсы можно по этой <a class="reg" href="#" target="_blank">ссылке</a>.</p>
+          <p class="text__l text__reg">Узнать свой уровень владения английским языком и зарегистрироваться на онлайн курсы можно по этой <a class="reg" href="#" target="_blank">ссылке</a>.</p>
         </div>
         <img src="img/registr/reg.png" alt="">
       </div><!--Section-->
@@ -130,8 +133,10 @@
     </div><!--Registration-->
   </div><!--Container-->
 
-  <div class="bg__img-4">
+  <div>
+    <img class="bg__img" src="img/4.png" alt="">
   </div>
+
 
   <div class="container">
     <h1 id="contacts" class="title title__c">Контакты</h1>
