--- a/monte-i/index.html
+++ b/monte-i/index.html
@@ -9,11 +9,13 @@
 </head>
 
 <body>
-  <div class="header">
+  <div class="head">
     <div class="container">
       <div class="header_inner">
     <div class="logo">
+      <a href="#top">
       <h1 class="monte">Monte-i.com</h1>
+    </a>
     </div>
       <div class="navigation">
         <nav>
@@ -35,7 +37,7 @@
   <!-- header -->
 
   
-<div class="container">
+<div id="top" class="container">
   <div class="main">
     <div class="search">
       <div class="search__input-cell">
@@ -45,9 +47,65 @@
         <button class="search_btn">Найти</button>
       </div>
     </div>
-      <div id="news" class="news">Новости</div>
-      <div id="weather" class="weather">Погода</div>
-      <div id="banks" class="banks">Курс и банки</div>
+      <div id="news" class="news">
+        <div class="titles">
+          <h3 class="title__item">Новости</h3>
+        </div>
+        <div class="news__item">
+          <rssapp-carousel id="21IKUWvymOm2WCPQ"></rssapp-carousel><script src="https://widget.rss.app/v1/carousel.js" type="text/javascript" async></script>
+        </div>
+      </div>
+      <div id="weather" class="weather">
+        <div class="titles">
+          <h3 class="title__item">Погода</h3>
+        </div>
+        <div class="weather__items">
+          <script>
+            (function(d, s, id) {
+                if (d.getElementById(id)) {
+                    if (window.__TOMORROW__) {
+                        window.__TOMORROW__.renderWidget();
+                    }
+                    return;
+                }
+                const fjs = d.getElementsByTagName(s)[0];
+                const js = d.createElement(s);
+                js.id = id;
+                js.src = "https://www.tomorrow.io/v1/widget/sdk/sdk.bundle.min.js";
+    
+                fjs.parentNode.insertBefore(js, fjs);
+            })(document, 'script', 'tomorrow-sdk');
+            </script>
+    
+            <div class="tomorrow"
+               data-location-id=""
+               data-language="RU"
+               data-unit-system="METRIC"
+               data-skin="light"
+               data-widget-type="upcoming"
+               style="padding-bottom:22px;position:relative;"
+            >
+              <a
+                href="https://www.tomorrow.io/weather-api/"
+                rel="nofollow noopener noreferrer"
+                target="_blank"
+                style="position: absolute; bottom: 0; transform: translateX(-50%); left: 50%;"
+              >
+                <img
+                  alt="Powered by the Tomorrow.io Weather API"
+                  src="https://weather-website-client.tomorrow.io/img/powered-by.svg"
+                  width="250"
+                  height="18"
+                />
+              </a>
+            </div>
+        </div>
+      </div>
+      <div id="banks" class="banks">
+        <div class="titles">
+          <h3 class="title__item">Курс и банки</h3>
+        </div>
+        <iframe style="width:100%;border:0;overflow:hidden;background-color:transparent;height:130.094px" scrolling="no" src="https://fortrader.org/informers/getInformer?st=17&cat=7&title=%D0%9A%D1%83%D1%80%D1%81%D1%8B%20%D0%B2%D0%B0%D0%BB%D1%8E%D1%82%20%D0%A6%D0%91%20%D0%A0%D0%A4&texts=%7B%22toolTitle%22%3A%22%D0%92%D0%B0%D0%BB%D1%8E%D1%82%D0%B0%22%2C%22todayCourse%22%3A%22%22%7D&mult=1&showGetBtn=0&hideHeader=0&hideDate=0&w=0&codes=1&colors=false&items=2%2C21%2C60&columns=&toCur=11111"></iframe></div>
       <div id="car" class="car">Авто и Мото</div>
       <div id="boats" class="boats">Лодки</div>
       <div id="realty" class="realty">Недвижимость</div>
