--- a/school/index.html
+++ b/school/index.html
@@ -60,7 +60,7 @@
       </div><!--Section-->
       <div class="section">
         <div class="text">
-          <p class="text__l">	Учите английский язык вместе со всей семьёй. Поддержка и участие родителей - важный аспект в обучении детей. Пэтому, помимо обычных домашних заданий мы разработали творческие упражнения для совместного выполнения. Придумать сказку про домашних животных, создать аппликацию из разных геометрических фигур, прогуляться по парку и обсудить окружающий мир на английском. Вы сами вместе с детьми можете выбрать любое доступное задание и выполнить его в удобное для Вас время. Не получилось в первого раза? - Не беда, можно посоветоваться с преподавателем и попытаться ещё раз. Мы всегда рады прийти на помощь.</p>
+          <p class="text__l">	Учите английский язык вместе со всей семьёй. Поддержка и участие родителей - важный аспект в обучении детей. Поэтому, помимо обычных домашних заданий мы разработали творческие упражнения для совместного выполнения. Придумать сказку про домашних животных, создать аппликацию из разных геометрических фигур, прогуляться по парку и обсудить окружающий мир на английском. Вы сами вместе с детьми можете выбрать любое доступное задание и выполнить его в удобное для Вас время. Не получилось в первого раза? - Не беда, можно посоветоваться с преподавателем и попытаться ещё раз. Мы всегда рады прийти на помощь.</p>
         </div>
         <img src="img/about us/about_2.png" alt="">
       </div><!--Section-->
@@ -90,7 +90,7 @@
             <li><p class="text__l group__txt">12-14 лет - Elementary и Pre-intermediate+ уровни;</p></li>
             <li><p class="text__l group__txt">15-18 лет - Intermediate и Upper-intermediate уровни;
             </p></li>
-          <li><p class="text__l group__txt"> 18+ лет - Begginer/Elementary, Pre-intermediate/Intermediate, Upper-intermediate.</p></li>
+          <li><p class="text__l group__txt"> 18+ лет - Beginner/Elementary, Pre-intermediate/Intermediate, Upper-intermediate.</p></li>
         </ul>
         </div><!--Text-->
         <img src="img/ groups/gr_1.png" alt="">
@@ -103,7 +103,7 @@
         <li><p class="text__r group__txt">7-11 лет - Beginner и Elementary+ уровни;</p></li>
       <li><p class="text__r group__txt">12-14 лет - Elementary и Pre-intermediate+ уровни;</p></li>
     <li><p class="text__r group__txt">15-18 лет - Intermediate и Upper-intermediate уровни;</p></li>
-    <li><p class="text__r group__txt">18+ лет - Begginer/Elementary, Pre-intermediate/Intermediate, Upper-intermediate.</p></li>
+    <li><p class="text__r group__txt">18+ лет - Beginner/Elementary, Pre-intermediate/Intermediate, Upper-intermediate.</p></li>
         </ul><br>
         <p class="text__r">С носителем языка:</p><br>
         <ul>
