--- a/school/index.html
+++ b/school/index.html
@@ -159,7 +159,7 @@
       </div><!--Contact-->
       <div class="contact whatsapp">
         <img class="icon" src="icons/whats app.png" alt="">
-        <a href="#" target="_blank">+382 68 381 048</a>
+        <a href="https://api.whatsapp.com/send?phone=79625801008" target="_blank">+7 962 580 10 08</a>
       </div><!--Contact-->
     </div><!--Contacts-->
   </div><!--Container-->
