auto,boats,realty

--- a/monte-i/index.html
+++ b/monte-i/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>monte-i</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;700&family=Source+Serif+4:opsz@8..60&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -79,10 +82,10 @@
   <div class="main">
     <div class="search">
       <div class="search__input-cell">
-        <input class="search_input" type="search" name="query" value="" maxlength="200" required="required" placeholder="Найти на Monte-i.com">
+        <input class="search__input" type="search" name="query" value="" maxlength="200" required="required" placeholder="Найти на Monte-i.com">
       </div>
       <div class="search__btn-cell">
-        <button class="search_btn">Найти</button>
+        <button class="search__btn">Найти</button>
       </div>
     </div>
     <!--News-->
@@ -164,6 +167,48 @@
             </div>
           </div><!--section_header-->
 
+          <div class="cards__display">
+            <div class="cards">
+
+              <div class="card">
+                <a class="card__link" href="https://www.bugatti.com/" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/cars/car.jpeg" alt="">
+                </div>
+                <div class="card__title">Buggati Chiron</div>
+                <div class="card__price">10 000 000$</div>
+              </div><!--Card-->
+
+              <div class="card">
+                <a class="card__link" href="https://www.bugatti.com/" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/cars/car.jpeg" alt="">
+                </div>
+                <div class="card__title">Buggati Chiron</div>
+                <div class="card__price">10 000 000$</div>
+              </div><!--Card-->
+
+              <div class="card">
+                <a class="card__link" href="https://www.bugatti.com/" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/cars/car.jpeg" alt="">
+                </div>
+                <div class="card__title">Buggati Chiron</div>
+                <div class="card__price">10 000 000$</div>
+              </div><!--Card-->
+
+              <div class="card">
+                <a class="card__link" href="https://www.bugatti.com/" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/cars/car.jpeg" alt="">
+                </div>
+                <div class="card__title">Buggati Chiron</div>
+                <div class="card__price">10 000 000$</div>
+              </div><!--Card-->
+
+            </div><!--cards-->
+          </div><!--cards__display-->
+
         </div><!--Container-->
       </div>
         <!--Boats
@@ -180,6 +225,47 @@
               <a href="#" class="section__item">Запчасти</a>
             </div>
           </div><!--section_header-->
+          <div class="cards__display">
+            <div class="cards">
+
+              <div class="card">
+                <a class="card__link" href="https://salut-boats.ru/motornye-lodki/" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/boats/boat.jpeg" alt="">
+                </div>
+                <div class="card__title">Моторная Лодка</div>
+                <div class="card__price">10 000$</div>
+              </div><!--Card-->
+
+              <div class="card">
+                <a class="card__link" href="https://salut-boats.ru/motornye-lodki/" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/boats/boat.jpeg" alt="">
+                </div>
+                <div class="card__title">Моторная Лодка</div>
+                <div class="card__price">10 000$</div>
+              </div><!--Card-->
+
+              <div class="card">
+                <a class="card__link" href="https://salut-boats.ru/motornye-lodki/" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/boats/boat.jpeg" alt="">
+                </div>
+                <div class="card__title">Моторная Лодка</div>
+                <div class="card__price">10 000$</div>
+              </div><!--Card-->
+
+              <div class="card">
+                <a class="card__link" href="https://salut-boats.ru/motornye-lodki/" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/boats/boat.jpeg" alt="">
+                </div>
+                <div class="card__title">Моторная Лодка</div>
+                <div class="card__price">10 000$</div>
+              </div><!--Card-->
+
+            </div><!--cards-->
+          </div><!--cards__display-->
 
         </div><!--Container-->
       </div>
@@ -197,7 +283,47 @@
               <a href="#" class="section__item">Продажа</a>
             </div>
           </div><!--section_header-->
+          <div class="cards__display">
+            <div class="cards">
 
+              <div class="card">
+                <a class="card__link" href="https://salon.ru/article/kvartira-v-stile-minimalizm-s-panoramnym-vidom-na-moskvu-62232" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/realty/apartment.jpeg" alt="">
+                </div>
+                <div class="card__title">2-к квартира</div>
+                <div class="card__price">100 000$</div>
+              </div><!--Card-->
+
+              <div class="card">
+                <a class="card__link" href="https://salon.ru/article/kvartira-v-stile-minimalizm-s-panoramnym-vidom-na-moskvu-62232" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/realty/apartment.jpeg" alt="">
+                </div>
+                <div class="card__title">2-к квартира</div>
+                <div class="card__price">100 000$</div>
+              </div><!--Card-->
+
+              <div class="card">
+                <a class="card__link" href="https://salon.ru/article/kvartira-v-stile-minimalizm-s-panoramnym-vidom-na-moskvu-62232" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/realty/apartment.jpeg" alt="">
+                </div>
+                <div class="card__title">2-к квартира</div>
+                <div class="card__price">100 000$</div>
+              </div><!--Card-->
+
+              <div class="card">
+                <a class="card__link" href="https://salon.ru/article/kvartira-v-stile-minimalizm-s-panoramnym-vidom-na-moskvu-62232" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/realty/apartment.jpeg" alt="">
+                </div>
+                <div class="card__title">2-к квартира</div>
+                <div class="card__price">100 000$</div>
+              </div><!--Card-->
+
+            </div><!--cards-->
+          </div><!--cards__display-->
         </div><!--Container-->
       </div>
         <!--Food
