--- a/monte-i/index.html
+++ b/monte-i/index.html
@@ -9,9 +9,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;700&family=Source+Serif+4:opsz@8..60&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <script src="app.js"></script>
 </head>
 
 <body>
+ 
   <div class="head">
     <div class="container">
       <div class="header_inner">
@@ -85,7 +87,7 @@
         <input class="search__input" type="search" name="query" value="" maxlength="200" required="required" placeholder="Найти на Monte-i.com">
       </div>
       <div class="search__btn-cell">
-        <button class="search__btn">Найти</button>
+        <button onclick="message()" class="search__btn" type="button">Найти</button>
       </div>
     </div>
     <!--News-->
@@ -154,20 +156,23 @@
 
         <!--Cars
         =========================-->
-      <div id="car" class="car">
+      <div class="car">
         <div class="container">
 
           <div class="section_header">
             <h2 class="section__title">
               <a href="">Авто и Мото</a></h2>
             <div class="section__items">
-              <a href="#" class="section__item">Автомобили</a>
-              <a href="#" class="section__item">Мотоциклы</a>
+              <a href="#" class="section__item" onclick="cars()">Автомобили</a>
+              <a href="#" class="section__item" onclick="motoc()">Мотоциклы</a>
               <a href="#" class="section__item">Запчасти</a>
             </div>
           </div><!--section_header-->
 
-          <div class="cards__display">
+          <!--Car__cards
+          ===============================-->
+
+          <div id="car" class="cards__display cards__car">
             <div class="cards">
 
               <div class="card">
@@ -207,7 +212,52 @@
               </div><!--Card-->
 
             </div><!--cards-->
-          </div><!--cards__display-->
+          </div><!--cards__display__cars-->
+
+          <!--Moto__cards
+          ===============================-->
+
+          <div id="moto" class="cards__display cards__moto">
+            <div class="cards">
+
+              <div class="card">
+                <a class="card__link" href="https://www.bugatti.com/" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/cars/car.jpeg" alt="">
+                </div>
+                <div class="card__title">Moto</div>
+                <div class="card__price">10 000 000$</div>
+              </div><!--Card-->
+
+              <div class="card">
+                <a class="card__link" href="https://www.bugatti.com/" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/cars/car.jpeg" alt="">
+                </div>
+                <div class="card__title">Moto</div>
+                <div class="card__price">10 000 000$</div>
+              </div><!--Card-->
+
+              <div class="card">
+                <a class="card__link" href="https://www.bugatti.com/" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/cars/car.jpeg" alt="">
+                </div>
+                <div class="card__title">Moto</div>
+                <div class="card__price">10 000 000$</div>
+              </div><!--Card-->
+
+              <div class="card">
+                <a class="card__link" href="https://www.bugatti.com/" target="_blank"></a>
+                <div class="card__picture">
+                  <img src="img/cars/car.jpeg" alt="">
+                </div>
+                <div class="card__title">Buggati Chiron</div>
+                <div class="card__price">10 000 000$</div>
+              </div><!--Card-->
+
+            </div><!--cards-->
+          </div><!--cards__display__moto-->
 
         </div><!--Container-->
       </div>
@@ -225,7 +275,8 @@
               <a href="#" class="section__item">Запчасти</a>
             </div>
           </div><!--section_header-->
-          <div class="cards__display">
+
+          <div class="cards__display cards__boats">
             <div class="cards">
 
               <div class="card">
@@ -283,7 +334,8 @@
               <a href="#" class="section__item">Продажа</a>
             </div>
           </div><!--section_header-->
-          <div class="cards__display">
+
+          <div class="cards__display cards__rent">
             <div class="cards">
 
               <div class="card">
