--- a/monte-i/index.html
+++ b/monte-i/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;700&family=Source+Serif+4:opsz@8..60&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <script src="app.js"></script>
+  <script src="javascript/auto.js"></script>
 </head>
 
 <body>
