--- a/monte-i/index.html
+++ b/monte-i/index.html
@@ -90,7 +90,8 @@
         <button onclick="message()" class="search__btn" type="button">Найти</button>
       </div>
     </div>
-    <!--News-->
+    <!--News
+    ===============================-->
       <div id="news" class="news">
         <div class="titles">
           <h3 class="title__item">Новости</h3>
@@ -99,12 +100,14 @@
           <rssapp-carousel id="21IKUWvymOm2WCPQ"></rssapp-carousel><script src="https://widget.rss.app/v1/carousel.js" type="text/javascript" async></script>
         </div>
       </div>
-      <!--Weather-->
+
+      <!--Weather
+      ==============================-->
       <div id="weather" class="weather">
         <div class="titles">
           <h3 class="title__item">Погода</h3>
         </div>
-        <div class="weather__items">
+        <div class="weather__item">
           <script>
             (function(d, s, id) {
                 if (d.getElementById(id)) {
